# turing-machine-api

./: .dockerignore  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: deploy.yml  health.yml  restart.yml
app/: __main__.py  db.py  main.py  models.py  settings.py
app/api/: router.py
app/api/endpoints/: games.py  health.py  heroes.py  problems.py  teams.py  users.py
app/core/: config.py
app/crud/: __init__.py  base.py  game.py  problem.py  user.py
app/db/: session.py
app/models/: __init__.py  game.py  hero.py  problem.py  team.py  user.py
app/utils/: game.py  law.py  manager.py  problem.py  user.py
deploy/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh
migrations/: env.py
migrations/versions/: 0150bacd547c_remove_year.py  39411a2b8f9c_add_user.py  4400b7e67200_init.py  4ae017cb000e_add_year.py  6a5718d68fed_add_game_status.py  c00ff4f58eab_init.py  e651c5b97956_add_user_and_game.py  e9be579130e6_game_model_orm_mode.py  f7ce93f1e6e3_init.py
