[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kiwhan Song <kwsong0113@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.1"
asyncpg = "^0.28.0"
fastapi = "^0.100.0"
sqlmodel = "^0.0.8"
greenlet = "^2.0.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
